--- a/NH4_VQE.ipynb
+++ b/NH4_VQE.ipynb
@@ -232,7 +232,38 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-22.12092133634557\n",
+      "=== GROUND STATE ENERGY ===\n",
+      " \n",
+      "* Electronic ground state energy (Hartree): -69.895074\n",
+      "  - computed part:      -22.120921\n",
+      "  - FreezeCoreTransformer extracted energy part: -47.774153\n",
+      "~ Nuclear repulsion energy (Hartree): 14.033696\n",
+      "> Total ground state energy (Hartree): -55.861379\n",
+      " \n",
+      "=== MEASURED OBSERVABLES ===\n",
+      " \n",
+      "  0:  # Particles: 9.000 S: 0.500 S^2: 0.751 M: -0.500\n",
+      " \n",
+      "=== DIPOLE MOMENTS ===\n",
+      " \n",
+      "~ Nuclear dipole moment (a.u.): [0.0  0.0  0.0]\n",
+      " \n",
+      "  0: \n",
+      "  * Electronic dipole moment (a.u.): [-0.00007  -0.000097  -0.000011]\n",
+      "    - computed part:      [-0.00007  -0.000097  -0.000011]\n",
+      "    - FreezeCoreTransformer extracted energy part: [0.0  0.0  0.0]\n",
+      "  > Dipole moment (a.u.): [0.00007  0.000097  0.000011]  Total: 0.000121\n",
+      "                 (debye): [0.000179  0.000247  0.000028]  Total: 0.000307\n",
+      " \n"
+     ]
+    }
+   ],
    "source": [
     "vqe = VQE(aer_estimator, var_form, optimizer)\n",
     "vqe.initial_point = [0] * var_form.num_parameters\n",
@@ -244,6 +275,18 @@
     "electronic_structure_result.formatting_precision = 6\n",
     "print(electronic_structure_result.groundenergy)\n",
     "print(electronic_structure_result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vqe =  VQE(aer_estimator , var_form , optimizer,initial_point=[0] * var_form.num_parameters)\n",
+    "\n",
+    "vqe_calc = vqe.compute_minimum_eigenvalue(qubit_op)\n",
+    "vqe_result = problem.interpret(vqe_calc).total_energies[0].real"
    ]
   }
  ],
